# file-utilities

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.cursor/rules/ai-behavior/: ai-friendly-coding-practices.mdc  general-ai-behavior-rules.mdc
.cursor/rules/markdown/: markdown_guidelines.mdc
.cursor/rules/project/: project-specific-build-tool.mdc  project-structure-rule.mdc  project-verbosity-level.mdc
.cursor/rules/python/: python-architecture.mdc  python-ci-cd-implementation-rule.mdc  python-code-formatting.mdc  python-code-review.mdc  python-configuration-management.mdc  python-data-modeling.mdc  python-dependency-management.mdc  python-documentation.mdc  python-general-coding-style.mdc  python-general-rules.mdc  python-logging.mdc  python-modular-design-rule.mdc  python-monitoring.mdc  python-naming-conventions.mdc  python-project-structure-rule.mdc  python-security.mdc  python-testing.mdc  python-version-control.mdc
file_renamer/: __init__.py  cli.py
tests/: __init__.py  test_cli.py
