[project]
name = "file-renamer"
version = "0.1.0"
description = "A CLI tool to rename files based on their contents and modification dates"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "click>=8.1.7",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "PyPDF2>=3.0.0",
]
requires-python = ">=3.11"

[project.scripts]
file-renamer = "file_renamer.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0", "ruff>=0.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
